Compelte Notification Setting SS-1417
